# crux

./: CMakeLists.txt
include/: redux.hpp  state-mgmt.hpp
include/middleware/: thunk.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  action.hpp  reduce.hpp  redux.cpp  state-mgmt.cpp  state.hpp
